# Bima360

./: .env.example  .gitignore  docker-compose.yml  pyproject.toml
.github/workflows/: backend.yml  frontend.yml
backend/: Dockerfile  alembic.ini  docker-compose.prod.yml  main.py  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_initial.py
backend/core/: auth.py  config.py  database.py  dependencies.py  redis_client.py  responses.py
backend/models/: models.py
backend/prompts/: chatbot_system.txt  doc_verification.txt  risk_scoring.txt
backend/routers/: ai.py  auth.py  claims.py  health.py  payments.py  policies.py  uploads.py  users.py
backend/schemas/: schemas.py
backend/services/: ai_service.py  claim_service.py  fabric_service.py  payment_service.py
backend/tests/: conftest.py  test_ai_service.py  test_fabric_service.py  test_payment_service.py  test_policy_router.py
blockchain/chaincode/claim/: claim_contract.go  claim_contract_test.go  go.mod
blockchain/chaincode/policy/: go.mod  policy_contract.go  policy_contract_test.go
blockchain/network/: connection-profile.json  deploy.sh
blockchain/wallets/: .gitignore
frontend/: Dockerfile  next.config.ts  package.json
frontend/app/: globals.css  layout.tsx
frontend/app/(agent)/: layout.tsx
frontend/app/(user)/: layout.tsx
frontend/components/: providers.tsx
frontend/i18n/: request.ts
frontend/lib/: api.ts  query-client.ts
frontend/messages/: en.json  hi.json
frontend/store/: agent.ts  auth.ts
infra/lambda/: pg_to_bq.py  requirements.txt
(+4 files in other folders)
